# internal/mods/dashboard/main.go
@@ -21,6 +21,7 @@ func (a *Dashboard) RegisterV1Routers(ctx context.Context, v1 *gin.RouterGroup) 
 		g.GET("qps", a.DashboardAPI.QueryQPS)
 		g.GET("circuit-breakers", a.DashboardAPI.QueryCircuitBreakers)
 		g.GET("trends", a.DashboardAPI.QueryTrends)
+		g.GET("model-performance-trends", a.DashboardAPI.QueryModelPerformanceTrends)
 		g.POST("sync-redis", a.DashboardAPI.SyncRedis)
 		g.GET("model-ranking", a.DashboardAPI.QueryModelRanking)
 		g.GET("overview", a.DashboardAPI.QueryOverview)
